--- a/ion_prod.ipynb
+++ b/ion_prod.ipynb
@@ -57,6 +57,7 @@
     "    with h5py.File(sim, 'r') as hf:\n",
     "        Mstar   = np.array(hf[num+tag+'/Galaxy/Mstar_aperture'].get('30'), dtype = np.float32)*1e10\n",
     "        MassweightedZ = np.array(hf[num+tag+'/Galaxy/Metallicity'].get('CurrentMassWeightedStellarZ'), dtype = np.float32)\n",
+    "        MassweightedGZ = np.array(hf[num+tag+'/Galaxy/Metallicity'].get('MassWeightedGasZ'), dtype = np.float32)\n",
     "        MFUVatt = np.array(hf[num+tag+'/Galaxy/BPASS_2.2.1/Chabrier300/Luminosity/DustModelI'].get('FUV'), dtype = np.float32) * erg / s / Hz\n",
     "        MFUVint = np.array(hf[num+tag+'/Galaxy/BPASS_2.2.1/Chabrier300/Luminosity/Intrinsic'].get('FUV'), dtype = np.float32) * erg / s / Hz\n",
     "        MFUVstel = np.array(hf[num+tag+'/Galaxy/BPASS_2.2.1/Chabrier300/Luminosity/Pure_Stellar'].get('FUV'), dtype = np.float32) * erg / s / Hz\n",
@@ -70,10 +71,12 @@
     "        Hbetaint = np.array(hf[num+tag+'/Galaxy/BPASS_2.2.1/Chabrier300/Lines/Intrinsic/HI4861'].get('Luminosity'), dtype = np.float64)      \n",
     "        \n",
     "        ion_ppe = np.array(hf[num+tag+'/Galaxy/BPASS_2.2.1/Chabrier300/Indices'].get('IonisingPPE'), dtype = np.float64) \n",
+    "        \n",
+    "        sfr   = np.array(hf[num+tag+'/Galaxy/SFR_aperture/30'].get('10Myr'), dtype = np.float32)\n",
     "\n",
     "    ok = (Halphaint>0) * (Mstar>1e8)\n",
     "\n",
-    "    return Mstar[ok], MFUVatt[ok], Halpha[ok], Hbeta[ok], Halphaint[ok], Hbetaint[ok], MassweightedZ[ok], ion_ppe[ok], MFUVint[ok], MFUVstel[ok], Av[ok]"
+    "    return Mstar[ok], MFUVatt[ok], Halpha[ok], Hbeta[ok], Halphaint[ok], Hbetaint[ok], MassweightedZ[ok], ion_ppe[ok], MFUVint[ok], MFUVstel[ok], Av[ok], MassweightedGZ[ok], sfr[ok]"
    ]
   },
   {
@@ -488,6 +491,8 @@
     "    MFUVint = np.concatenate(dat[:,8])\n",
     "    MFUVstel = np.concatenate(dat[:,9])\n",
     "    Av = np.concatenate(dat[:,10])\n",
+    "    MassweightedGZ = np.concatenate(dat[:,11])\n",
+    "    sfr = np.concatenate(dat[:,12])\n",
     "\n",
     "    ion_ppe = MFUVstel.to('erg/s/Hz') * ion_ppe / MFUVint.to('erg/s/Hz')\n",
     "\n",
@@ -633,13 +638,21 @@
     "fig.subplots_adjust(hspace=0,wspace=0)\n",
     "plt.savefig('plots/ion_ppe_z_evo.png', dpi=300, bbox_inches='tight')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3c79b537",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
    "display_name": "astro_venv",
    "language": "python",
-   "name": "python3"
+   "name": "astro_venv"
   },
   "language_info": {
    "codemirror_mode": {
