--- a/sfrd.ipynb
+++ b/sfrd.ipynb
@@ -98,6 +98,8 @@
     "\n",
     "    with h5py.File(sim, 'r') as hf:\n",
     "        Mstar   = np.array(hf[num+tag+'/Galaxy/Mstar_aperture'].get('30'), dtype = np.float32)*1e10\n",
+    "        SFR10   = np.array(hf[num+tag+'/Galaxy/SFR_aperture/30'].get('10Myr'), dtype = np.float32)\n",
+    "        \n",
     "        MassweightedZ = np.array(hf[num+tag+'/Galaxy/Metallicity'].get('CurrentMassWeightedStellarZ'), dtype = np.float32)\n",
     "        MFUVatt = np.array(hf[num+tag+'/Galaxy/BPASS_2.2.1/Chabrier300/Luminosity/DustModelI'].get('FUV'), dtype = np.float32) * erg / s / Hz\n",
     "        MFUVint = np.array(hf[num+tag+'/Galaxy/BPASS_2.2.1/Chabrier300/Luminosity/Intrinsic'].get('FUV'), dtype = np.float32) * erg / s / Hz\n",
@@ -113,7 +115,7 @@
     "\n",
     "    ok = (Halphaint>0) * (lnu_to_absolute_mag(MFUVatt)<-17)\n",
     "\n",
-    "    return Mstar[ok], MFUVatt[ok], Halpha[ok], Hbeta[ok], Halphaint[ok], Hbetaint[ok], MassweightedZ[ok], MFUVint[ok], Av[ok]"
+    "    return Mstar[ok], MFUVatt[ok], Halpha[ok], Hbeta[ok], Halphaint[ok], Hbetaint[ok], MassweightedZ[ok], MFUVint[ok], Av[ok], SFR10[ok]"
    ]
   },
   {
@@ -340,7 +342,7 @@
     "axs[1].plot(grid.lam[ok]/1e4, c.get_tau(grid.lam[ok])/c.get_tau(5500*Angstrom), label='SMC', alpha=0.8, ls='dashed', lw=4, color='olive')\n",
     "\n",
     "c = PowerLaw()\n",
-    "axs[1].plot(grid.lam[ok]/1e4, c.get_tau(grid.lam[ok])/c.get_tau(5500*Angstrom), label='Powerlaw', alpha=0.6, ls='dotted', lw=4, color='olive')\n",
+    "axs[1].plot(grid.lam[ok]/1e4, c.get_tau(grid.lam[ok])/c.get_tau(5500*Angstrom), label='Powerlaw, $\\delta=-1$', alpha=0.6, ls='dotted', lw=4, color='olive')\n",
     "\n",
     "c = Calzetti2000()\n",
     "axs[1].plot(grid.lam[ok]/1e4, c.get_tau(grid.lam[ok])/c.get_tau(5500*Angstrom), label=r'Calzetti, $\\delta=0$', alpha=0.6, ls='solid', lw=4, color='grey')\n",
@@ -359,7 +361,7 @@
     "axs[0].set_ylim(5e28, 2e30)\n",
     "axs[0].set_yscale('log')\n",
     "\n",
-    "axs[1].set_xlabel(r'$\\lambda_{\\rm rest}$/$\\mu m$', fontsize=14)\n",
+    "axs[1].set_xlabel(r'$\\lambda_{\\rm rest}$/${\\rm \\mu m}$', fontsize=14)\n",
     "axs[1].set_ylim(0,6)\n",
     "axs[1].set_ylabel(r'A$_{\\lambda}$/A$_{V}$', fontsize=14)\n",
     "\n",
@@ -437,6 +439,9 @@
     "\n",
     "tags = ['010_z005p000', '009_z006p000', '008_z007p000', '007_z008p000', '006_z009p000', '005_z010p000']\n",
     "\n",
+    "int_frac = np.zeros((2, len(tags)))\n",
+    "int_frac_err = np.zeros((2, len(tags)))\n",
+    "\n",
     "obsc_frac = np.zeros((2, len(tags)))\n",
     "obsc_frac_err = np.zeros((2, len(tags)))\n",
     "\n",
@@ -467,6 +472,7 @@
     "    MassweightedZ = np.concatenate(dat[:,6])\n",
     "    MFUVint = np.concatenate(dat[:,7])\n",
     "    Av = np.concatenate(dat[:,8])\n",
+    "    SFR10 = np.concatenate(dat[:,9])\n",
     "    \n",
     "    Halpha_Av = calc_line_corr_from_Av(Halpha * erg/s, lam_Ha, Av, slope=0).to_value()\n",
     "    Halpha_balmer =  calc_line_corr(Halpha * erg/s, lam_Ha, Halpha/Hbeta, slope=0).to_value() \n",
@@ -476,14 +482,24 @@
     "    sfr_Av = np.log10(Ha_to_SFR(Halpha_Av))\n",
     "    sfr_balmer = np.log10(Ha_to_SFR(Halpha_balmer))\n",
     "    \n",
+    "    sfr10_int = np.log10(SFR10)\n",
+    "    \n",
+    "    # f, ax = plt.subplots(nrows = 1, ncols = 1, figsize=(3, 3))\n",
+    "    # ax.scatter(sfr10_int, np.log10(MassweightedZ), s=1)\n",
+    "    # ax.set_ylim(-5,-1.5)\n",
+    "    # ax.set_xlim(0,3)\n",
+    "    # f.savefig(F'app_plots/sfr_Z_z{z}.png')\n",
+    "    # f.close()\n",
+    "    \n",
     "    tot_gals = len(Mstar)\n",
     "    \n",
     "    n = np.array([])\n",
     "    for jj in range(40):\n",
     "        n = np.append(n, len(dat[jj][0]))\n",
     "\n",
-    "    #Make the SFR distribution function, integrate the different ratio to get the recovered fraction\n",
+    "    #Make the SFR distribution function, integrate the different ratio to get the recovered fraction  \n",
     "   \n",
+    "    #Intrinsic\n",
     "    hist, M, err = get_flares_LF(sfr_int, weights, sfrbins, n)\n",
     "    ok = np.where(hist>=5)[0]\n",
     "    phi, phierr = M/(binwidth*vol), err/(binwidth*vol)\n",
@@ -503,6 +519,30 @@
     "    \n",
     "    f = unc_schechter_log(sfrbinshigh, unumpy.uarray(fit[0], fiterr[0]), unumpy.uarray(fit[1], fiterr[1]), unumpy.uarray(fit[2], fiterr[2]))\n",
     "    tothigh = integrate.simpson(f, sfrbinshigh)\n",
+    "    \n",
+    "    \n",
+    "    # SFR (10 Myr)\n",
+    "    hist, M, err = get_flares_LF(sfr10_int, weights, sfrbins, n)\n",
+    "    ok = np.where(hist>=5)[0]\n",
+    "    phi, phierr = M/(binwidth*vol), err/(binwidth*vol)\n",
+    "    axs[ii].errorbar(bincen, np.log10(phi), yerr=[np.log10(phi)-np.log10(phi-phierr), np.log10(phi+phierr)-np.log10(phi)], ls='None', marker='s', color='grey', label='SFR (10Myr)', alpha=0.9, markersize=4)\n",
+    "    \n",
+    "    ok = np.isfinite(np.log10(phi)) * np.isfinite(bincen)\n",
+    "    result = fit_schechter(np.log10(phi[ok]), bincen[ok])\n",
+    "    # print (z, 'int', result.fit_report())\n",
+    "    fit = np.array([*result.best_values.values()])\n",
+    "    fiterr = np.array(result.flatchain.std())\n",
+    "    f = unc_schechter_fn(sfrbins, unumpy.uarray(fit[0], fiterr[0]), unumpy.uarray(fit[1], fiterr[1]), unumpy.uarray(fit[2], fiterr[2]))\n",
+    "    \n",
+    "    f = unc_schechter_log(sfrbinslow, unumpy.uarray(fit[0], fiterr[0]), unumpy.uarray(fit[1], fiterr[1]), unumpy.uarray(fit[2], fiterr[2]))\n",
+    "    tmp = integrate.simpson(f, sfrbinslow) / tot    \n",
+    "    int_frac[0][ii] = unumpy.nominal_values(tmp)\n",
+    "    int_frac_err[0][ii] = unumpy.std_devs(tmp)\n",
+    "    \n",
+    "    f = unc_schechter_log(sfrbinshigh, unumpy.uarray(fit[0], fiterr[0]), unumpy.uarray(fit[1], fiterr[1]), unumpy.uarray(fit[2], fiterr[2]))\n",
+    "    tmp = integrate.simpson(f, sfrbinshigh) / tothigh\n",
+    "    int_frac[1][ii] = unumpy.nominal_values(tmp)\n",
+    "    int_frac_err[1][ii] = unumpy.std_devs(tmp)\n",
     "    \n",
     "    \n",
     "    hist, M, err = get_flares_LF(sfr_dust, weights, sfrbins, n)\n",
@@ -604,7 +644,7 @@
     "        label.set_fontsize(12)\n",
     "\n",
     "axs[0].legend(frameon=False, fontsize=12)\n",
-    "axs[4].set_xlabel(r'log$_{10}$($\\mathrm{SFR}_{\\rm H\\alpha}$/(M$_{\\odot}$/yr))', fontsize=15)\n",
+    "axs[4].set_xlabel(r'log$_{10}$($\\mathrm{SFR}$/(M$_{\\odot}$/yr))', fontsize=15)\n",
     "\n",
     "fig.subplots_adjust(bottom=0.12, wspace=0, hspace=0)\n",
     "\n",
@@ -625,6 +665,8 @@
     "\n",
     "zs = np.arange(5,11,1)\n",
     "\n",
+    "axs[0].plot(zs, int_frac[0], color='black', label='SFR (10 Myr)', ls='dotted', lw=2, alpha=0.5)\n",
+    "\n",
     "axs[0].plot(zs, obsc_frac[0], color='black', label='Unobscured', ls='dashed', lw=4, alpha=0.5)\n",
     "# axs[0].fill_between(zs, obsc_frac[0] - obsc_frac_err[0], obsc_frac[0] + obsc_frac_err[0], alpha=0.2, color='black')\n",
     "\n",
@@ -633,6 +675,8 @@
     "\n",
     "axs[0].plot(zs, sfrd_frac_balmer[0], color='brown', label='Balmer corrected', lw=4, alpha=0.5, zorder=10)\n",
     "# axs[0].fill_between(zs, sfrd_frac_balmer[0] - sfrd_frac_balmer_err[0], sfrd_frac_balmer[0] + sfrd_frac_balmer_err[0], alpha=0.4, color='brown')\n",
+    "\n",
+    "axs[1].plot(zs, int_frac[1], color='black', ls='dotted', lw=2, alpha=0.5)\n",
     "\n",
     "axs[1].plot(zs, obsc_frac[1], color='black', ls='dashed', lw=4, alpha=0.5)\n",
     "# axs[1].fill_between(zs, obsc_frac[1] - obsc_frac_err[1], obsc_frac[1] + obsc_frac_err[1], alpha=0.2, color='black')\n",
@@ -675,7 +719,7 @@
   "kernelspec": {
    "display_name": "astro_venv",
    "language": "python",
-   "name": "python3"
+   "name": "astro_venv"
   },
   "language_info": {
    "codemirror_mode": {
