--- a/app_mzr_cal.ipynb
+++ b/app_mzr_cal.ipynb
@@ -15,7 +15,6 @@
     "from schwimmbad import MultiPool\n",
     "from uncertainties import unumpy\n",
     "from scipy.stats import gaussian_kde\n",
-    "from scipy.optimize import curve_fit\n",
     "\n",
     "from synthesizer.grid import Grid\n",
     "from synthesizer.particle import Galaxy\n",
@@ -107,7 +106,7 @@
     "\n",
     "    return Mstar[ok], MFUVatt[ok], Halpha[ok], OIII5007[ok], OIII4959[ok], OII3727[ok], NeIII3869[ok], OIII5007int[ok], OIII4959int[ok], OII3727int[ok], NeIII3869int[ok], Hbeta[ok], Halphaint[ok], Hbetaint[ok], MassweightedZ[ok], Av[ok], HbetaEW[ok]\n",
     "\n",
-    "def plot_contour(x, y, ax, cmap, levels, label, zorder, alpha=0.5):\n",
+    "def plot_contour(x, y, ax, cmap, label, zorder, alpha=0.5):\n",
     "    \n",
     "    xy = np.vstack([x, y])\n",
     "    kde = gaussian_kde(xy)\n",
@@ -750,8 +749,8 @@
     "axs[1] = plot_hexbin(np.log10(data_lines[F'Ne3O2_z{z}']), np.log10(data_lines[F'R3_z{z}']), ax=axs[1], cmap='Blues', gridsize=(35,30), label=F'FLARES (z={z})', zorder=10)\n",
     "\n",
     "\n",
-    "axs[0] = plot_contour(np.log10(data_lines[F'intO32_z{z}']), np.log10(data_lines[F'intR23_z{z}']), ax=axs[0], label=F'FLARES intrinsic (z={z})', cmap='Oranges_r', levels=12, zorder=10, alpha=0.8)\n",
-    "axs[1] = plot_contour(np.log10(data_lines[F'intNe3O2_z{z}']), np.log10(data_lines[F'intR3_z{z}']), ax=axs[1], label=F'FLARES intrinsic (z={z})', cmap='Oranges_r', levels=12, zorder=10, alpha=0.8)\n",
+    "axs[0] = plot_contour(np.log10(data_lines[F'intO32_z{z}']), np.log10(data_lines[F'intR23_z{z}']), ax=axs[0], label=F'FLARES intrinsic (z={z})', cmap='Oranges_r', zorder=10, alpha=0.8)\n",
+    "axs[1] = plot_contour(np.log10(data_lines[F'intNe3O2_z{z}']), np.log10(data_lines[F'intR3_z{z}']), ax=axs[1], label=F'FLARES intrinsic (z={z})', cmap='Oranges_r', zorder=10, alpha=0.8)\n",
     "\n",
     "\n",
     "\n",
@@ -1133,7 +1132,8 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3"
+   "pygments_lexer": "ipython3",
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
