--- a/app_photvary.ipynb
+++ b/app_photvary.ipynb
@@ -40,7 +40,6 @@
     ")\n",
     "\n",
     "from obs_data_plots import (\n",
-    "    plot_met_data,\n",
     "    plot_rebels_data\n",
     ")\n",
     "\n",
@@ -210,9 +209,6 @@
     "    twinyaxs[1].legend(custom, [r'Varying only A$_{\\mathrm{V}}$', 'Varying A$_{\\mathrm{V}}$ and ages', 'Varying A$_{\\mathrm{V}}$ and Z', 'Varying all'], framealpha=0.3, fontsize=12, loc=\"upper right\", )\n",
     "\n",
     "    fig.subplots_adjust(hspace=0.18)\n",
-    "\n",
-    "\n",
-    "    # twinyax.legend(custom, [r'Varying only A$_{\\mathrm{V}}$', 'Varying A$_{\\mathrm{V}}$ and ages', 'Varying A$_{\\mathrm{V}}$ and Z', 'Varying all'], frameon=True, fontsize=12, loc=\"upper left\")\n",
     "\n",
     "    plt.savefig(F'app_plots/app_toy_R23_O32_R3_Ne3O2_{key}.png', dpi=300, bbox_inches='tight')   \n",
     "    plt.close()\n",
@@ -551,7 +547,8 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3"
+   "pygments_lexer": "ipython3",
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
