--- a/ion_prod.ipynb
+++ b/ion_prod.ipynb
@@ -304,7 +304,6 @@
    "source": [
     "fig, axs = plt.subplots(nrows = 2, ncols = 2, figsize=(7, 7), facecolor='w', edgecolor='k')\n",
     "axs = axs.ravel()\n",
-    "# twinax = axs[1].twinx()\n",
     "\n",
     "stitle = [r'Varying only A$_{\\mathrm{V}}$', r'Varying A$_{\\mathrm{V}}$ and ages', r'Varying A$_{\\mathrm{V}}$ and Z', 'Varying all']\n",
     "\n",
@@ -344,16 +343,13 @@
     "    \n",
     "axs[1].yaxis.tick_right()\n",
     "axs[3].yaxis.tick_right()\n",
-    "# axs[2].set_xlabel(r'A$_{V}$', fontsize=12)\n",
-    "# axs[3].set_xlabel(r'A$_{V}$', fontsize=12)\n",
+    "\n",
     "axs[0].set_ylabel(r'log$_{10}$($\\xi_{\\rm ion}$/(Hz/erg))', fontsize=12)\n",
     "axs[2].set_ylabel(r'log$_{10}$($\\xi_{\\rm ion}$/(Hz/erg))', fontsize=12)\n",
     "\n",
     "axs[0].legend(frameon=True, fontsize=11, loc='lower left') \n",
     "axs[3].legend(frameon=True, fontsize=11, loc='lower left') \n",
-    "# twinax.legend(custom, [r'Varying only A$_{\\mathrm{V}}$', 'Varying A$_{\\mathrm{V}}$ and ages', 'Varying A$_{\\mathrm{V}}$ and Z', 'Varying all'], frameon=True, fontsize=11, loc=\"lower left\", framealpha=0.3)\n",
-    "# twinax.set_yticks([])\n",
-    "# twinax.set_yticklabels([])\n",
+    "\n",
     "fig.subplots_adjust(hspace=0.3, wspace=0)\n",
     "plt.savefig('plots/toy_ion_ppe.png', dpi=300, bbox_inches='tight')\n",
     "plt.show()   \n"
@@ -621,7 +617,6 @@
     "    axs[jj].grid()\n",
     "    axs[jj].set_xlim(4.7, 10.4)\n",
     "    axs[jj].set_ylim(23.2, 25.7)\n",
-    "    # axs[jj].set_xticks(zs)\n",
     "\n",
     "axs[0].legend(frameon=True, fontsize=12, ncols=4, loc=(0.3,1.01), framealpha=0.6)\n",
     "    \n",
@@ -630,7 +625,6 @@
     "axs[4].set_xlabel('$z$', fontsize=15)\n",
     "\n",
     "for ii, ax in enumerate(axs):\n",
-    "    # ax.set_title(F'{mbins[ii]}'+r'$\\leq$log$_{10}$(M$_{\\star}$/M$_{\\odot}$)$\\leq$'+F'{mbins[ii+1]}', fontsize=12)\n",
     "    ax.text(5., 23.5, F'{mbins[ii]}'+r'$\\leq$log$_{10}$(M$_{\\star}$/M$_{\\odot}$)$<$'+F'{mbins[ii+1]}', va='center', fontsize=13)\n",
     "    for label in (ax.get_xticklabels() + ax.get_yticklabels()):\n",
     "        label.set_fontsize(13)\n",
@@ -663,7 +657,8 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3"
+   "pygments_lexer": "ipython3",
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
