--- a/mzr.ipynb
+++ b/mzr.ipynb
@@ -13,9 +13,7 @@
     "from astropy.cosmology import LambdaCDM\n",
     "import pandas as pd\n",
     "from schwimmbad import MultiPool\n",
-    "from uncertainties import unumpy\n",
     "from scipy.stats import gaussian_kde\n",
-    "from scipy.optimize import curve_fit\n",
     "from lmfit import Model\n",
     "\n",
     "from synthesizer.grid import Grid\n",
@@ -45,13 +43,8 @@
     "from utilities import (\n",
     "    binned_weighted_quantile, \n",
     "    compute_metallicity_dust_correction,\n",
-    "    compute_metallicity_nodust_correction\n",
     ")\n",
     "\n",
-    "from obs_data_plots import (\n",
-    "    plot_met_data,\n",
-    "    plot_rebels_data\n",
-    ")\n",
     "\n",
     "cosmo = LambdaCDM(Om0=0.307, Ode0=0.693, H0=67.77, Ob0=0.04825)\n",
     "plt.style.use('styles/style.mplstyle')"
@@ -93,7 +86,6 @@
     "        OIII4959 = np.array(hf[num+tag+'/Galaxy/BPASS_2.2.1/Chabrier300/Lines/DustModelI/OIII4959'].get('Luminosity'), dtype = np.float64)\n",
     "        OII3727 = np.array(hf[num+tag+'/Galaxy/BPASS_2.2.1/Chabrier300/Lines/DustModelI/OII3726'].get('Luminosity'), dtype = np.float64) + np.array(hf[num+tag+'/Galaxy/BPASS_2.2.1/Chabrier300/Lines/DustModelI/OII3729'].get('Luminosity'), dtype = np.float64)\n",
     "        NeIII3869 = np.array(hf[num+tag+'/Galaxy/BPASS_2.2.1/Chabrier300/Lines/DustModelI/NeIII3869'].get('Luminosity'), dtype = np.float64)\n",
-    "        # + np.array(hf[num+tag+'/Galaxy/BPASS_2.2.1/Chabrier300/Lines/DustModelI/HI3889'].get('Luminosity'), dtype = np.float64) + np.array(hf[num+tag+'/Galaxy/BPASS_2.2.1/Chabrier300/Lines/DustModelI/HeI3889'].get('Luminosity'), dtype = np.float64)\n",
     "\n",
     "        OIII5007int = np.array(hf[num+tag+'/Galaxy/BPASS_2.2.1/Chabrier300/Lines/Intrinsic/OIII5007'].get('Luminosity'), dtype = np.float64)\n",
     "        OIII4959int = np.array(hf[num+tag+'/Galaxy/BPASS_2.2.1/Chabrier300/Lines/Intrinsic/OIII4959'].get('Luminosity'), dtype = np.float64)\n",
@@ -618,7 +610,6 @@
     "    label.set_fontsize(12)\n",
     "\n",
     "ax.legend(fontsize=11, frameon=True, framealpha=0.2, loc='upper left')\n",
-    "# twinax.legend(loc='upper left', fontsize=11, frameon=True, framealpha=0.5)\n",
     "    \n",
     "ax.set_ylabel('12+log(O/H)', fontsize=15)      \n",
     "ax.set_xlabel('log$_{10}$(M$_{\\star}$/M$_{\\odot}$)', fontsize=15)\n",
@@ -743,7 +734,8 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3"
+   "pygments_lexer": "ipython3",
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
