--- a/sfrd.ipynb
+++ b/sfrd.ipynb
@@ -565,23 +565,13 @@
     "    tmp = integrate.simpson(f, sfrbinshigh) / tothigh\n",
     "    obsc_frac[1][ii] = unumpy.nominal_values(tmp)\n",
     "    obsc_frac_err[1][ii] = unumpy.std_devs(tmp)\n",
-    "    # axs[ii].fill_between(bincen[ok], np.log10(phi[ok]-phierr[ok]), np.log10(phi[ok]+phierr[ok]), alpha=0.25, color='black')\n",
-    "    # tmp = integrate.simpson(unumpy.uarray(phi, phierr), 10**bincen) / tot\n",
-    "    # obsc_frac[0][ii] = unumpy.nominal_values(tmp)\n",
-    "    # obsc_frac_err[0][ii] = unumpy.std_devs(tmp)\n",
-    "        \n",
-    "    # hist, M, err = get_flares_LF(sfr_dust, weights, sfrbinshigh, n)\n",
-    "    # phi, phierr = M/(binwidthhigh*vol), err/(binwidthhigh*vol)\n",
-    "    # tmp = integrate.simpson(unumpy.uarray(phi, phierr), 10**bincenhigh) / tothigh\n",
-    "    # obsc_frac[1][ii] = unumpy.nominal_values(tmp)\n",
-    "    # obsc_frac_err[1][ii] = unumpy.std_devs(tmp)\n",
+    "\n",
     "    \n",
     "    \n",
     "    hist, M, err = get_flares_LF(sfr_Av, weights, sfrbins, n)\n",
     "    ok = np.where(hist>=5)[0]\n",
     "    phi, phierr = M/(binwidth*vol), err/(binwidth*vol)\n",
-    "    # axs[ii].plot(bincen, np.log10(phi), lw=4, alpha=0.4, ls='solid', label='Av corrected', color='blue')\n",
-    "    # axs[ii].fill_between(bincen[ok], np.log10(phi[ok]-phierr[ok]), np.log10(phi[ok]+phierr[ok]), alpha=0.25, color='blue')\n",
+    "\n",
     "    ok = np.isfinite(np.log10(phi)) * np.isfinite(bincen)\n",
     "    result = fit_schechter(np.log10(phi[ok]), bincen[ok])\n",
     "    print (z, 'Av', result.fit_report())\n",
@@ -598,22 +588,13 @@
     "    tmp = integrate.simpson(f, sfrbinshigh) / tothigh\n",
     "    sfrd_frac_Av[1][ii] = unumpy.nominal_values(tmp)\n",
     "    sfrd_frac_Av_err[1][ii] = unumpy.std_devs(tmp)\n",
-    "#     tmp = integrate.simpson(unumpy.uarray(phi, phierr), 10**bincen) / tot\n",
-    "#     sfrd_frac_Av[0][ii] = unumpy.nominal_values(tmp)\n",
-    "#     sfrd_frac_Av_err[0][ii] = unumpy.std_devs(tmp)\n",
-    "        \n",
-    "#     hist, M, err = get_flares_LF(sfr_Av, weights, sfrbinshigh, n)\n",
-    "#     phi, phierr = M/(binwidthhigh*vol), err/(binwidthhigh*vol)\n",
-    "#     tmp = integrate.simpson(unumpy.uarray(phi, phierr), 10**bincenhigh) / tothigh\n",
-    "#     sfrd_frac_Av[1][ii] = unumpy.nominal_values(tmp)\n",
-    "#     sfrd_frac_Av_err[1][ii] = unumpy.std_devs(tmp)\n",
+    "\n",
     "    \n",
     "    \n",
     "    hist, M, err = get_flares_LF(sfr_balmer, weights, sfrbins, n)\n",
     "    ok = np.where(hist>=5)[0]\n",
     "    phi, phierr = M/(binwidth*vol), err/(binwidth*vol)\n",
-    "    # axs[ii].plot(bincen, np.log10(phi), lw=4, alpha=0.4, ls='solid', label='Balmer corrected', color='brown')\n",
-    "    # axs[ii].fill_between(bincen[ok], np.log10(phi[ok]-phierr[ok]), np.log10(phi[ok]+phierr[ok]), alpha=0.25, color='brown')\n",
+    "\n",
     "    ok = np.isfinite(np.log10(phi)) * np.isfinite(bincen)\n",
     "    result = fit_schechter(np.log10(phi[ok]), bincen[ok])\n",
     "    print (z, 'balmer', result.fit_report())\n",
@@ -668,24 +649,20 @@
     "axs[0].plot(zs, int_frac[0], color='black', label='SFR (10 Myr)', ls='dotted', lw=2, alpha=0.5)\n",
     "\n",
     "axs[0].plot(zs, obsc_frac[0], color='black', label='Unobscured', ls='dashed', lw=4, alpha=0.5)\n",
-    "# axs[0].fill_between(zs, obsc_frac[0] - obsc_frac_err[0], obsc_frac[0] + obsc_frac_err[0], alpha=0.2, color='black')\n",
     "\n",
     "axs[0].plot(zs, sfrd_frac_Av[0], color='blue', label='Av corrected', lw=4, alpha=0.5)\n",
-    "# axs[0].fill_between(zs, sfrd_frac_Av[0] - sfrd_frac_Av_err[0], sfrd_frac_Av[0] + sfrd_frac_Av_err[0], alpha=0.4, color='blue')\n",
     "\n",
     "axs[0].plot(zs, sfrd_frac_balmer[0], color='brown', label='Balmer corrected', lw=4, alpha=0.5, zorder=10)\n",
-    "# axs[0].fill_between(zs, sfrd_frac_balmer[0] - sfrd_frac_balmer_err[0], sfrd_frac_balmer[0] + sfrd_frac_balmer_err[0], alpha=0.4, color='brown')\n",
+    "\n",
     "\n",
     "axs[1].plot(zs, int_frac[1], color='black', ls='dotted', lw=2, alpha=0.5)\n",
     "\n",
     "axs[1].plot(zs, obsc_frac[1], color='black', ls='dashed', lw=4, alpha=0.5)\n",
-    "# axs[1].fill_between(zs, obsc_frac[1] - obsc_frac_err[1], obsc_frac[1] + obsc_frac_err[1], alpha=0.2, color='black')\n",
     "\n",
     "axs[1].plot(zs, sfrd_frac_Av[1], color='blue', lw=4, alpha=0.5)\n",
-    "# axs[1].fill_between(zs, sfrd_frac_Av[1] - sfrd_frac_Av_err[1], sfrd_frac_Av[1] + sfrd_frac_Av_err[1], alpha=0.4, color='blue')\n",
     "\n",
     "axs[1].plot(zs, sfrd_frac_balmer[1], color='brown', lw=4, alpha=0.5)\n",
-    "# axs[1].fill_between(zs, sfrd_frac_balmer[1] - sfrd_frac_balmer_err[1], sfrd_frac_balmer[1] + sfrd_frac_balmer_err[1], alpha=0.4, color='orange')\n",
+    "\n",
     "\n",
     "axs[0].legend(fontsize=12, frameon=True)\n",
     "\n",
@@ -730,7 +707,8 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3"
+   "pygments_lexer": "ipython3",
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
