--- a/app_mzr_cal.ipynb
+++ b/app_mzr_cal.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Appendix plots: Comparison to jwst observations and using Sanders+2024 calibrations"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
