--- a/ion_prod.ipynb
+++ b/ion_prod.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "a73d9071",
+   "metadata": {},
+   "source": [
+    "## Ioinising photon production efficiency"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "ae0a3c51",
