--- a/app_photvary.ipynb
+++ b/app_photvary.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "054ded82",
+   "metadata": {},
+   "source": [
+    "## Appendix plots after varying the default photoionisation model parameters"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "ce821e7f",
