--- a/sfrd.ipynb
+++ b/sfrd.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "ed4715de",
+   "metadata": {},
+   "source": [
+    "## Star formation function and the SFRD"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "cc12e0c9",
