--- a/app_mzr_cal.ipynb
+++ b/app_mzr_cal.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Appendix plots: Comparison to jwst observations and using Sanders+2024 calibrations"
+    "## Appendix plots: Comparison to jwst observations and using [Sanders+2024](https://ui.adsabs.harvard.edu/abs/2024ApJ...962...24S/abstract) calibrations"
    ]
   },
   {
@@ -69,6 +69,11 @@
    "outputs": [],
    "source": [
     "def get_data(ii, tag, OIIIlimit=1e-17*erg/s/cm**2, cosmo=cosmo):\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    Helper function to retreive FLARES data relevant\n",
+    "    for this notebook\n",
+    "    \"\"\"\n",
     "\n",
     "    z = float(tag[5:].replace('p','.'))\n",
     "    \n",
@@ -145,12 +150,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define the grid\n",
+    "# Define the synthesizer grid\n",
     "grid_name = \"bpass-2.2.1-bin_chabrier03-0.1,300.0_cloudy-c23.01-sps\"\n",
     "grid_dir = \"./data/\"\n",
     "grid = Grid(grid_name, grid_dir=grid_dir)\n",
     "\n",
     "Zsun = 0.014\n",
+    "\n",
+    "# Define some of the required lines\n",
     "req_lines = {'H 1 6562.80A': 'Halpha',\n",
     "             'H 1 4861.32A': 'Hbeta',\n",
     "             'O 2 3726.03A,O 2 3728.81A': '[OII]3727,29',\n",
@@ -158,6 +165,8 @@
     "             'O 3 5006.84A': '[OIII]5007',\n",
     "             'Ne 3 3868.76A': 'NeIII3869'\n",
     "}\n",
+    "\n",
+    "# Define some top hat filters for the UV\n",
     "tophats = {\n",
     "    \"UV1500\": {\"lam_eff\": 1500*Angstrom, \"lam_fwhm\": 300*Angstrom},\n",
     "    \"UV2800\": {\"lam_eff\": 2800*Angstrom, \"lam_fwhm\": 300*Angstrom},\n",
@@ -179,6 +188,14 @@
     "       O3,\n",
     "       'Ne 3 3868.76A'\n",
     "   ]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create toy model galaxies \n",
+    "(Same across all notebooks)"
    ]
   },
   {
@@ -315,6 +332,13 @@
     "$O32 = [OIII]\\lambda5007/[OII]\\lambda3727,29$\n",
     "\n",
     "$Ne3O2 = [NeIII]\\lambda3869/[OII]\\lambda 3727,29$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Plot R23 vs O32 and R3 vs Ne3O2 for the toy model galaxies"
    ]
   },
   {
@@ -472,6 +496,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Derived metallicities for the toy galaxies"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -572,6 +603,11 @@
    "source": [
     "def flares_galaxies(ii, func, data):\n",
     "    \n",
+    "    \"\"\"\n",
+    "    Helper function to create line luminosity dictionaries\n",
+    "    of FLARES galaxies\n",
+    "    \"\"\"\n",
+    "    \n",
     "    Halpha, Hbeta, OII3727, OIII4959, OIII5007, NeIII3869, Av, HbetaEW = data\n",
     "    \n",
     "    gal = {}\n",
@@ -594,7 +630,12 @@
     "    \n",
     "    return out\n",
     "\n",
-    "def get_flares_galZ(data_att, data_int, tot_gals):    \n",
+    "def get_flares_galZ(data_att, data_int, tot_gals):   \n",
+    "    \n",
+    "    \"\"\"\n",
+    "    Helper funciton to derive strong-line calibration metallicities\n",
+    "    for the FLARES galaxies using the Sanders+2024 calibrations\n",
+    "    \"\"\" \n",
     "    \n",
     "    f = partial(compute_metallicity_dust_correction, Avdust=False, Balmerdust=True)\n",
     "    flares_dust_corr_Z = np.array([flares_galaxies(ii, compute_metallicity_dust_correction, data_att) for ii in range(tot_gals)])[:,0]\n",
@@ -610,6 +651,13 @@
     "    flares_int_dust_corr_Z = np.array([flares_galaxies(ii, f, data_int) for ii in range(tot_gals)])[:,0]\n",
     "    \n",
     "    return np.asarray(flares_dust_corr_Z, dtype=np.float32), np.asarray(flares_Avdust_corr_Z, dtype=np.float32), np.asarray(flares_nodust_corr_Z, dtype=np.float32), np.asarray(flares_int_dust_corr_Z, dtype=np.float32), np.asarray(flares_int_nodust_corr_Z, dtype=np.float32)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Calculate strong-line calibration derived metallicities for FLARES"
    ]
   },
   {
@@ -741,6 +789,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Plot R23 vs O32 and R3 vs Ne3O2 for the FLARES galaxies"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -838,6 +893,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 1-to-1 plot of intrinsic vs observed (dust atenuated) R23 and R3"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -865,6 +927,13 @@
     "    ax.plot(x, x, ls='dashed', color='black')\n",
     "    \n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### MZR relation in FLARES using Sanders+2024"
    ]
   },
   {
@@ -985,12 +1054,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Redshift evolution of the MZR"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Redshift evolution of the MZR\n",
     "fig, axs = plt.subplots(nrows = 2, ncols = 2, figsize=(8, 7), sharex=True, sharey=True, facecolor='w', edgecolor='k')\n",
     "axs=axs.ravel()\n",
     "\n",
@@ -1054,12 +1129,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Redshift evolution of the LZR"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Redshift evolution of the LZR\n",
     "fig, axs = plt.subplots(nrows = 2, ncols = 2, figsize=(8, 7), sharex=True, sharey=True, facecolor='w', edgecolor='k')\n",
     "axs=axs.ravel()\n",
     "\n",
