--- a/app_photvary.ipynb
+++ b/app_photvary.ipynb
@@ -407,6 +407,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f2ac6bce",
+   "metadata": {},
+   "source": [
+    "### Create toy model galaxies \n",
+    "(Same across all notebooks)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "93f6742b",
