--- a/ion_prod.ipynb
+++ b/ion_prod.ipynb
@@ -53,6 +53,10 @@
    "outputs": [],
    "source": [
     "def get_data(ii, tag):\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    Helper function to obtain rlevant FLARES data\n",
+    "    \"\"\"\n",
     "\n",
     "    num = str(ii)\n",
     "\n",
@@ -94,7 +98,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define the grid\n",
+    "# Define the synthesizer grid\n",
     "grid_name = \"bpass-2.2.1-bin_chabrier03-0.1,300.0_cloudy-c23.01-sps\"\n",
     "grid_dir = \"./data/\" \n",
     "grid = Grid(grid_name, grid_dir=grid_dir)\n",
@@ -129,6 +133,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2cf4f1e7",
+   "metadata": {},
+   "source": [
+    "### Create toy model galaxies \n",
+    "(Same across all notebooks)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "150626c7",
@@ -138,9 +151,6 @@
     "redshift = 6.\n",
     "# Number of star particles\n",
     "n = 100\n",
-    "# ages = np.random.uniform(1, 30, size=n) * Myr\n",
-    "# Z = 10**np.random.uniform(-3.5, -2., size=n)\n",
-    "# mass = 1e6*np.random.uniform(1, 5, n) * Msun \n",
     "ages = 10**np.random.uniform(0, np.log10(50), size=n) * Myr\n",
     "Z = 10**np.random.uniform(-3.5, -2., size=n)\n",
     "mass = 1e6*np.random.uniform(2, 5, n) * Msun \n",
@@ -304,6 +314,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f4f19ee1",
+   "metadata": {},
+   "source": [
+    "#### Plot the ionising photon production efficiency of the toy model galaxies"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "5ced05aa",
@@ -364,6 +382,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c8dcf3e0",
+   "metadata": {},
+   "source": [
+    "#### Plot the ionising photon production rate of the toy model galaxies"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "9d530c7f",
@@ -416,6 +442,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3d288300",
+   "metadata": {},
+   "source": [
+    "#### Plot the UV-luminosities of the toy model galaxies"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "d7d98e56",
@@ -454,6 +488,15 @@
     "\n",
     "fig.subplots_adjust(hspace=0.3, wspace=0.)\n",
     "plt.show()   "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "29518f96",
+   "metadata": {},
+   "source": [
+    "### Deriving the ionising photon produciton efficiencies of the FLARES galaxies\n",
+    "Dust correct H-alpha and H-beta using the Balmer decrement and Av"
    ]
   },
   {
@@ -547,6 +590,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a9da8db9",
+   "metadata": {},
+   "source": [
+    "#### Plot the ionising photon production efficiency for z=6 FLARES galaxies"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "cc873f7d",
@@ -587,6 +638,15 @@
     "    \n",
     "fig.subplots_adjust(hspace=0,wspace=0)\n",
     "plt.savefig('plots/ion_ppe.png', dpi=300, bbox_inches='tight')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0358f1e6",
+   "metadata": {},
+   "source": [
+    "#### Plot the redshift evolution of the ionising photon production efficiency\n",
+    "We split the galaxies into different mass bins"
    ]
   },
   {
