--- a/sfrd.ipynb
+++ b/sfrd.ipynb
@@ -59,11 +59,19 @@
    "source": [
     "def Ha_to_SFR(Ha):\n",
     "    \n",
+    "    \"\"\"\n",
+    "    Convert Halpha to SFR using the Kennicut relation\n",
+    "    \"\"\"\n",
+    "    \n",
     "    sfr = 10**(-41.36) * Ha\n",
     "    \n",
     "    return sfr\n",
     "\n",
     "def unc_schechter_fn(logL, logLstar, logphistar, alpha):\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    Schechter function with uncertainty folded in logspace\n",
+    "    \"\"\"\n",
     "    \n",
     "    exponent = (logL - logLstar) * (alpha+1)\n",
     "    \n",
@@ -71,11 +79,19 @@
     "\n",
     "def schechter_fn(logL, logLstar, logphistar, alpha):\n",
     "    \n",
+    "    \"\"\"\n",
+    "    Schcehcter function in logspace\n",
+    "    \"\"\"\n",
+    "    \n",
     "    exponent = (logL - logLstar) * (alpha+1)\n",
     "    \n",
     "    return logphistar + exponent + np.log10(np.log(10) * np.exp(- 10**(logL - logLstar) ))\n",
     "\n",
     "def unc_schechter_log(logL, logLstar, logphistar, alpha):\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    Scehchter funciton with uncertainties converted to linear space\n",
+    "    \"\"\"\n",
     "    \n",
     "    x = logL - logLstar\n",
     "    phistar = 10**logphistar\n",
@@ -83,6 +99,20 @@
     "    return unumpy.log(10) * phistar * (10 ** (x)) ** (alpha + 1) * np.e**(-10 ** x)\n",
     "\n",
     "def fit_schechter(phi, logL):\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    Lmfit function to fit the SFR Schschter function\n",
+    "    \n",
+    "    Attributes:\n",
+    "        phi (np.ndarray)\n",
+    "            The normalisation of the dsitribution function\n",
+    "        logL (np.ndarray)\n",
+    "            volume normalised number counts\n",
+    "            \n",
+    "    Returns:\n",
+    "        result (lmfit object)\n",
+    "            Fit results\n",
+    "    \"\"\"\n",
     "    \n",
     "    model = Model(schechter_fn)\n",
     "\n",
@@ -95,6 +125,11 @@
     "    return result\n",
     "\n",
     "def get_data(ii, tag):\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    Helper function to retreive FLARES data relevant\n",
+    "    for this notebook\n",
+    "    \"\"\"\n",
     "\n",
     "    num = str(ii)\n",
     "\n",
@@ -133,12 +168,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define the grid\n",
+    "# Define the synthesizer grid\n",
     "grid_name = \"bpass-2.2.1-bin_chabrier03-0.1,300.0_cloudy-c23.01-sps\"\n",
     "grid_dir = \"./data/\" \n",
     "grid = Grid(grid_name, grid_dir=grid_dir)\n",
     "\n",
     "Zsun = 0.014\n",
+    "\n",
+    "# Define the required lines\n",
     "req_lines = {'H 1 6562.80A': 'Halpha',\n",
     "             'H 1 4861.32A': 'Hbeta',\n",
     "             'O 2 3726.03A,O 2 3728.81A': '[OII]3727,29',\n",
@@ -165,6 +202,15 @@
     "\n",
     "lam_Ha = 6562.80 * Angstrom\n",
     "lam_Hb = 4861.32 * Angstrom"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d461013e",
+   "metadata": {},
+   "source": [
+    "### Create toy model galaxies \n",
+    "(Same across all notebooks)"
    ]
   },
   {
@@ -298,13 +344,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ed547045",
+   "metadata": {},
+   "source": [
+    "#### Star formation and metal enrichment history"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "1ddc599f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Star formation and metal enrichment history\n",
     "title = [r'Varying only A$_{\\mathrm{V}}$', 'Varying A$_{\\mathrm{V}}$ and ages', 'Varying A$_{\\mathrm{V}}$ and Z', 'Varying all']\n",
     "for jj, kk in enumerate(all_gals):\n",
     "    kk.stars.get_sfzh(log10ages=np.arange(6,7.81,0.05), log10metallicities=np.arange(-3.6,-1.9,0.05))\n",
@@ -319,6 +372,14 @@
     "    fig.savefig(F'plots/sfzh_{jj}.png', bbox_inches='tight', dpi=300)\n",
     "    plt.close()\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "37b834b3",
+   "metadata": {},
+   "source": [
+    "#### Spectra and attenuation curve of toy galaxies"
    ]
   },
   {
@@ -379,6 +440,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "85ee574d",
+   "metadata": {},
+   "source": [
+    "#### Recovering SFR fraction of toy galaxies"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "5a2bb275",
@@ -423,6 +492,17 @@
     "plt.savefig('plots/toy_sfr_frac.png', dpi=300, bbox_inches='tight')\n",
     "\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "61ff5e00",
+   "metadata": {},
+   "source": [
+    "#### Load FLARES galaxies\n",
+    "Convert the H-alpha luminosity (dust correct using Balmer decrement and Av) to SFR and fit Schechter function. Integrate the SFRF Schechter function to obtain the SFRD.\n",
+    "\n",
+    "Plot the SFRF"
    ]
   },
   {
@@ -640,6 +720,14 @@
     "fig.text(0.065, 0.5, r'log$_{10}$($\\Phi$/($\\mathrm{cMpc}^{-3}\\mathrm{dex}^{-1}$))', va='center', rotation='vertical', fontsize=15)\n",
     "\n",
     "plt.savefig('plots/sfr_function.png', dpi=300, bbox_inches='tight')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6f92c909",
+   "metadata": {},
+   "source": [
+    "#### Plot the SFRD fractions across redshift z=5-10"
    ]
   },
   {
