--- a/mzr.ipynb
+++ b/mzr.ipynb
@@ -64,6 +64,10 @@
    "outputs": [],
    "source": [
     "def get_data(ii, tag, mstarlimit=1e8, OIIIlimit=1e-17*erg/s/cm**2, cosmo=cosmo):\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    Helper function to load in the relevatn FLARES data\n",
+    "    \"\"\"\n",
     "\n",
     "    z = float(tag[5:].replace('p','.'))\n",
     "    \n",
@@ -108,6 +112,10 @@
     "\n",
     "def plot_contour(x, y, ax, cmap, levels, label, zorder, alpha=0.5):\n",
     "    \n",
+    "    \"\"\"\n",
+    "    Make contour plot given x and y distribution\n",
+    "    \"\"\"\n",
+    "    \n",
     "    xy = np.vstack([x, y])\n",
     "    kde = gaussian_kde(xy)\n",
     "\n",
@@ -134,7 +142,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define the grid\n",
+    "# Define the synthesizer grid\n",
     "grid_name = \"bpass-2.2.1-bin_chabrier03-0.1,300.0_cloudy-c23.01-sps\"\n",
     "grid_dir = \"./data/\"\n",
     "grid = Grid(grid_name, grid_dir=grid_dir)\n",
@@ -168,6 +176,14 @@
     "       O3,\n",
     "       'Ne 3 3868.76A'\n",
     "   ]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create toy model galaxies \n",
+    "(Same across all notebooks)"
    ]
   },
   {
@@ -342,6 +358,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Derived metallicities of the toy galaxies"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -431,6 +454,11 @@
    "source": [
     "def flares_galaxies(ii, func, data):\n",
     "    \n",
+    "    \"\"\"\n",
+    "    Function to package FLARES line luminosities into \n",
+    "    dictionaries\n",
+    "    \"\"\"\n",
+    "    \n",
     "    Halpha, Hbeta, OII3727, OIII4959, OIII5007, NeIII3869, Av, HbetaEW = data\n",
     "    \n",
     "    gal = {}\n",
@@ -455,6 +483,10 @@
     "\n",
     "def get_flares_galZ(data_att, data_int, tot_gals):    \n",
     "    \n",
+    "    \"\"\"\n",
+    "    Helper functions to get the FLARES strong-line metallicities\n",
+    "    \"\"\"\n",
+    "    \n",
     "    f = partial(compute_metallicity_dust_correction, Avdust=False, Balmerdust=True, Sanders=False, Curti=True)\n",
     "    flares_dust_corr_Z = np.array([flares_galaxies(ii, f, data_att) for ii in range(tot_gals)])[:,0]\n",
     "    \n",
@@ -466,6 +498,13 @@
     "    flares_int_dust_corr_Z = np.array([flares_galaxies(ii, f, data_int) for ii in range(tot_gals)])[:,0]\n",
     "\n",
     "    return np.asarray(flares_dust_corr_Z, dtype=np.float32), np.asarray(flares_Avdust_corr_Z, dtype=np.float32), np.asarray(flares_int_dust_corr_Z, dtype=np.float32)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Derive FLARES strong-line metallicties using the Curti+2023 method"
    ]
   },
   {
@@ -572,6 +611,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### FLARES MZR"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -627,6 +673,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Derive the parameters for the FLARES MZR\n",
+    "Fitting funciton of the form: 12 + log(O/H) = beta * log(Mstar/(1e8 Msun)) + Zm8"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -657,12 +711,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Redshift evolution of the MZR"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Redshift evolution of the MZR\n",
     "fig, axs = plt.subplots(nrows = 1, ncols = 3, figsize=(9, 3), sharex=True, sharey=True, facecolor='w', edgecolor='k')\n",
     "axs=axs.ravel()\n",
     "\n",
